syntax = "proto3";

option java_package = "com.bilias.core.datastore";
option java_multiple_files = true;

message UserCookie {
    map<string, AsCookie> store = 1;
}
message AsCookie {
    string name = 1;
    string value = 2;
    uint32 max_age = 3;
    uint64 timestamp = 4;
    string domain = 5;
    string path = 6;
    bool secure = 7;
    bool http_only = 8;
}
